[package]
name = "wiresafe"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["wiresafe-derive"]

[dependencies]
arrayvec = { version = "*", optional = true }
crc32fast = { version = "1.3", default-features = false }
wiresafe-derive = { path = "wiresafe-derive" }

[features]
default = ["std"]
std = ["crc32fast/std"]
